# docs/openapi/discodeit-api-docs.json
@@ -6,8 +6,8 @@
   },
   "servers": [
     {
-      "url": "/",
-      "description": "배포된 서버"
+      "url": "http://localhost:8080",
+      "description": "Generated server url"
     }
   ],
   "tags": [
@@ -37,6 +37,150 @@
     }
   ],
   "paths": {
+    "/api/readStatuses/{userId}/{channelId}": {
+      "get": {
+        "tags": [
+          "ReadStatus"
+        ],
+        "summary": "특정 Channel에 대한 Message 읽음 상태 조회",
+        "operationId": "find",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "조회할 User ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "조회할 Channel ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Message 읽음 상태 조회 성공",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadStatusDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "해당 조합의 Message 읽음 상태를 찾을 수 없음"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "ReadStatus"
+        ],
+        "summary": "Message 읽음 상태 등록",
+        "description": "경로의 userId와 channelId가 대상을 지정한다. 없으면 생성하고 있으면 읽은 시각을 갱신한다.",
+        "operationId": "upsert",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "대상 User ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "대상 Channel ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ReadStatusUpsertRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "404": {
+            "description": "Channel 또는 User를 찾을 수 없음"
+          },
+          "200": {
+            "description": "읽음 상태가 요청한 값으로 반영됨",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadStatusDto"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "비공개 채널에 읽음 상태를 새로 만들려 함"
+          },
+          "400": {
+            "description": "요청 값이 올바르지 않음"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "ReadStatus"
+        ],
+        "summary": "Message 읽음 상태 삭제",
+        "operationId": "delete",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "삭제할 읽음 상태의 User ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "channelId",
+            "in": "path",
+            "description": "삭제할 읽음 상태의 Channel ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Message 읽음 상태가 성공적으로 삭제됨"
+          },
+          "404": {
+            "description": "해당 조합의 Message 읽음 상태를 찾을 수 없음"
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
         "tags": [
@@ -98,85 +242,11 @@
               }
             }
           },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
           "409": {
             "description": "같은 username 또는 email을 사용하는 User가 이미 존재함"
-          }
-        }
-      }
-    },
-    "/api/readStatuses": {
-      "get": {
-        "tags": [
-          "ReadStatus"
-        ],
-        "summary": "User의 Message 읽음 상태 목록 조회",
-        "operationId": "findAllByUserId",
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "query",
-            "description": "조회할 User ID",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Message 읽음 상태 목록 조회 성공",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ReadStatusDto"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "ReadStatus"
-        ],
-        "summary": "Message 읽음 상태 생성",
-        "operationId": "create_1",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ReadStatusCreateRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "Message 읽음 상태가 성공적으로 생성됨",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/ReadStatusDto"
-                }
-              }
-            }
           },
           "400": {
             "description": "요청 값이 올바르지 않음"
-          },
-          "404": {
-            "description": "Channel 또는 User를 찾을 수 없음"
-          },
-          "409": {
-            "description": "이미 읽음 상태가 존재함"
           }
         }
       }
@@ -221,7 +291,7 @@
           "Message"
         ],
         "summary": "Message 생성",
-        "operationId": "create_2",
+        "operationId": "create_1",
         "requestBody": {
           "content": {
             "multipart/form-data": {
@@ -247,6 +317,12 @@
           }
         },
         "responses": {
+          "404": {
+            "description": "Channel 또는 User를 찾을 수 없음"
+          },
+          "400": {
+            "description": "요청 값이 올바르지 않음"
+          },
           "201": {
             "description": "Message가 성공적으로 생성됨",
             "content": {
@@ -256,12 +332,6 @@
                 }
               }
             }
-          },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
-          "404": {
-            "description": "Channel 또는 User를 찾을 수 없음"
           }
         }
       }
@@ -356,11 +426,11 @@
               }
             }
           },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
           "401": {
             "description": "username 또는 password가 일치하지 않음"
+          },
+          "400": {
+            "description": "요청 값이 올바르지 않음"
           }
         }
       }
@@ -371,7 +441,7 @@
           "User"
         ],
         "summary": "User 삭제",
-        "operationId": "delete",
+        "operationId": "delete_1",
         "parameters": [
           {
             "name": "userId",
@@ -433,6 +503,15 @@
           }
         },
         "responses": {
+          "409": {
+            "description": "같은 username 또는 email을 사용하는 User가 이미 존재함"
+          },
+          "404": {
+            "description": "User를 찾을 수 없음"
+          },
+          "400": {
+            "description": "요청 값이 올바르지 않음"
+          },
           "200": {
             "description": "User 정보가 성공적으로 수정됨",
             "content": {
@@ -442,15 +521,6 @@
                 }
               }
             }
-          },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
-          "404": {
-            "description": "User를 찾을 수 없음"
-          },
-          "409": {
-            "description": "같은 username 또는 email을 사용하는 User가 이미 존재함"
           }
         }
       }
@@ -485,6 +555,9 @@
           "required": true
         },
         "responses": {
+          "404": {
+            "description": "해당 User의 UserStatus를 찾을 수 없음"
+          },
           "200": {
             "description": "User 온라인 상태가 성공적으로 업데이트됨",
             "content": {
@@ -494,58 +567,6 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "해당 User의 UserStatus를 찾을 수 없음"
-          }
-        }
-      }
-    },
-    "/api/readStatuses/{readStatusId}": {
-      "patch": {
-        "tags": [
-          "ReadStatus"
-        ],
-        "summary": "Message 읽음 상태 수정",
-        "operationId": "updateLastReadAt",
-        "parameters": [
-          {
-            "name": "readStatusId",
-            "in": "path",
-            "description": "수정할 읽음 상태 ID",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ReadStatusUpdateRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Message 읽음 상태가 성공적으로 수정됨",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/ReadStatusDto"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
-          "404": {
-            "description": "Message 읽음 상태를 찾을 수 없음"
           }
         }
       }
@@ -556,7 +577,7 @@
           "Message"
         ],
         "summary": "Message 삭제",
-        "operationId": "delete_1",
+        "operationId": "delete_2",
         "parameters": [
           {
             "name": "messageId",
@@ -617,11 +638,11 @@
               }
             }
           },
-          "400": {
-            "description": "요청 값이 올바르지 않음"
-          },
           "404": {
             "description": "Message를 찾을 수 없음"
+          },
+          "400": {
+            "description": "요청 값이 올바르지 않음"
           }
         }
       }
@@ -632,7 +653,7 @@
           "Channel"
         ],
         "summary": "Channel 삭제",
-        "operationId": "delete_2",
+        "operationId": "delete_3",
         "parameters": [
           {
             "name": "channelId",
@@ -693,11 +714,47 @@
               }
             }
           },
-          "404": {
-            "description": "Channel을 찾을 수 없음"
-          },
           "409": {
             "description": "Private Channel은 수정할 수 없음"
+          },
+          "404": {
+            "description": "Channel을 찾을 수 없음"
+          }
+        }
+      }
+    },
+    "/api/readStatuses": {
+      "get": {
+        "tags": [
+          "ReadStatus"
+        ],
+        "summary": "User의 Message 읽음 상태 목록 조회",
+        "operationId": "findAllByUserId",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "description": "조회할 User ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Message 읽음 상태 목록 조회 성공",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ReadStatusDto"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -783,7 +840,7 @@
           "BinaryContent"
         ],
         "summary": "첨부 파일 조회",
-        "operationId": "find",
+        "operationId": "find_1",
         "parameters": [
           {
             "name": "binaryContentId",
@@ -797,6 +854,9 @@
           }
         ],
         "responses": {
+          "404": {
+            "description": "첨부 파일을 찾을 수 없음"
+          },
           "200": {
             "description": "첨부 파일 조회 성공",
             "content": {
@@ -806,9 +866,6 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "첨부 파일을 찾을 수 없음"
           }
         }
       }
@@ -816,6 +873,47 @@
   },
   "components": {
     "schemas": {
+      "ReadStatusUpsertRequest": {
+        "required": [
+          "lastReadAt"
+        ],
+        "type": "object",
+        "properties": {
+          "lastReadAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "ReadStatusDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "userId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "channelId": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "lastReadAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
       "UserCreateRequest": {
         "required": [
           "email",
@@ -866,57 +964,6 @@
           },
           "online": {
             "type": "boolean"
-          }
-        }
-      },
-      "ReadStatusCreateRequest": {
-        "required": [
-          "channelId",
-          "lastReadAt",
-          "userId"
-        ],
-        "type": "object",
-        "properties": {
-          "userId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "channelId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "lastReadAt": {
-            "type": "string",
-            "format": "date-time"
-          }
-        }
-      },
-      "ReadStatusDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "userId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "channelId": {
-            "type": "string",
-            "format": "uuid"
-          },
-          "lastReadAt": {
-            "type": "string",
-            "format": "date-time"
           }
         }
       },
@@ -1117,18 +1164,6 @@
           },
           "online": {
             "type": "boolean"
-          }
-        }
-      },
-      "ReadStatusUpdateRequest": {
-        "required": [
-          "newLastReadAt"
-        ],
-        "type": "object",
-        "properties": {
-          "newLastReadAt": {
-            "type": "string",
-            "format": "date-time"
           }
         }
       },
